# inferrs

./: Cargo.toml  Makefile  README.md  nohup.out
.cargo/: config.toml
.gemini/: styleguide.md
.github/workflows/: ci.yml  release.yml
backends/inferrs-backend-hexagon/src/: fastrpc.rs  libdl.rs
backends/inferrs-backend-openvino/: Cargo.toml
backends/inferrs-backend-openvino/src/: lib.rs
candle-core/benches/: bench_main.rs
candle-core/examples/: bench_flash_attn_prefill.rs
candle-core/src/: conv.rs  cuda_conv1d_depthwise_btc.rs  cuda_flash_attn.rs  cuda_linear_attn_scan.rs  lib.rs
candle-core/src/metal_backend/: device.rs  mod.rs
candle-core/src/quantized/: cuda.rs  dummy_metal.rs  ggml_file.rs  gguf_file.rs  k_quants.rs  metal.rs  mod.rs
candle-kernels/: build.rs
candle-nn/src/: layer_norm.rs  moe.rs  ops.rs  rotary_emb.rs
inferrs/: Cargo.toml
inferrs-benchmark/: Cargo.toml
inferrs-benchmark/src/: main.rs
inferrs-kernels/candle-kernels/: build.rs
inferrs-models/: Cargo.toml
inferrs-models/src/: config.rs  gptq.rs  lib.rs  nvtx_marker.rs  turbo_quant.rs
inferrs/src/: backend.rs  bench.rs  benchmark.rs  config.rs  engine.rs  gguf_meta.rs  hub.rs  kv_cache.rs  main.rs  modelpack.rs  pull.rs  quantize.rs  run.rs  sampler.rs  server.rs  tokenizer.rs  tool_calls.rs
inferrs/tests/: server_integration.rs
oci-pull/: stub.c
src/: bench.rs  loader.rs  main.rs  run.rs  server.rs  tokenizer.rs
src/engine/: mod.rs
src/model/: transformer.rs
src/models/: mod.rs  qwen3.rs  qwen3_5.rs
src/server/: mod.rs
tests/: server_integration.rs
(+42 files in other folders)
